improved styles for smaller screens

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <li>HTML</li>
         <li>CSS</li>
       </ul>
-      To see more, take a look at my <a onclick="scrollDown('projects')">projects</a> and <a
-        onclick="scrollDown('certifications')">certifications</a>.
+      <p>To see more, take a look at my <a onclick="scrollDown('projects')">projects</a> and <a
+        onclick="scrollDown('certifications')">certifications</a>.</p>
 
       </p>
       <p>When I'm not coding I'm usually training for my next half-marathon, reading a book about the tech industry or
