--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
       <p class="no-floor">I'm a self taught full stack web developer with a bit more experience on the front-end.
         Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
-        <li>Javascript (ES6+)</li>
-        <li>React</li>
-        <li>NodeJS</li>
-        <li>ExpressJS</li>
-        <li>MongoDB</li>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li><span class="li-text">Javascript (ES6+)</li>
+        <li><span class="li-text">React</li>
+        <li><span class="li-text">NodeJS</li>
+        <li><span class="li-text">ExpressJS</li>
+        <li><span class="li-text">MongoDB</li>
+        <li><span class="li-text">HTML</li>
+        <li><span class="li-text">CSS</li>
       </ul>
       <p>To see more, take a look at my <a onclick="scrollDown('projects')">projects</a> and <a
-        onclick="scrollDown('certifications')">certifications</a>.</p>
+          onclick="scrollDown('certifications')">certifications</a>.</p>
 
       </p>
       <p>When I'm not coding I'm usually training for my next half-marathon, reading a book about the tech industry or
@@ -194,52 +194,63 @@
       <h3>Certifications</h3>
       <ul>
         <li>
-          <a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science"
-            target="_blank">Harvard CS50</a>
-          <span class="cert-tech">(
-            <strong>C</strong>,
-            <strong>Python</strong>,
-            <strong>SQL</strong>,
-            <strong>Algorithms</strong>,
-            <strong>Data Structures</strong>
-            )
+          <span class="li-text">
+            <a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science"
+              target="_blank">Harvard CS50</a>
+            <span class="cert-tech">(
+              <strong>C</strong>,
+              <strong>Python</strong>,
+              <strong>SQL</strong>,
+              <strong>Algorithms</strong>,
+              <strong>Data Structures</strong>
+              )
+            </span>
           </span>
         </li>
         <li>
-          <a href="https://www.udemy.com/course/the-web-developer-bootcamp/" target="_blank">The Web Developer
-            Bootcamp</a>
-          <span class="cert-tech">(
-            <strong>HTML</strong>,
-            <strong>CSS</strong>,
-            <strong>Javascript</strong>,
-            <strong>Node</strong>,
-            <strong>Express</strong>,
-            <strong>MongoDB</strong>,
-            <strong>Git</strong>
-            )
+          <span class="li-text">
+            <a href="https://www.udemy.com/course/the-web-developer-bootcamp/" target="_blank">The Web Developer
+              Bootcamp</a>
+            <span class="cert-tech">(
+              <strong>HTML</strong>,
+              <strong>CSS</strong>,
+              <strong>Javascript</strong>,
+              <strong>Node</strong>,
+              <strong>Express</strong>,
+              <strong>MongoDB</strong>,
+              <strong>Git</strong>
+              )
+            </span>
           </span>
         </li>
         <li>
-          <a href="https://www.udemy.com/course/understand-javascript/" target="_blank">JavaScript: Understanding the
-            Weird Parts</a>
-          <span class="cert-tech">(
-            <strong>Advanced Javascript</strong>
-            )
+          <span class="li-text">
+            <a href="https://www.udemy.com/course/understand-javascript/" target="_blank">JavaScript: Understanding the
+              Weird Parts</a>
+            <span class="cert-tech">(
+              <strong>Advanced Javascript</strong>
+              )
+            </span>
           </span>
         </li>
         <li>
-          <a href="https://javascript30.com/" target="_blank">JavaScript 30</a>
-          <span class="cert-tech">(
-            <strong>Javascript</strong>
-            )
+          <span class="li-text">
+            <a href="https://javascript30.com/" target="_blank">JavaScript 30</a>
+            <span class="cert-tech">(
+              <strong>Javascript</strong>
+              )
+            </span>
           </span>
         </li>
         <li>
-          <a href="https://www.udemy.com/course/react-redux/" target="_blank">Modern React with Redux</a>
-          <span class="cert-tech">(
-            <strong>React</strong>,
-            <strong>Redux</strong>
-            )
+          <span class="li-text">
+            <a href="https://www.udemy.com/course/react-redux/" target="_blank">Modern React
+              with Redux</a>
+            <span class="cert-tech">(
+              <strong>React</strong>,
+              <strong>Redux</strong>
+              )
+            </span>
           </span>
         </li>
       </ul>
