added video for world map project

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         I first lived in Ottawa, but I am now based in Montreal providing Tech Support for the VFX company
         <strong>DNEG</strong>.
       </p>
-      <p class="no-floor">I'm a self taught full stack web developer focusing on Javascript with a bit more experience
+      <p class="no-floor">I'm a self taught full stack web developer focusing on JavaScript with a bit more experience
         on the front-end. Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
-        <li><span class="li-text">Javascript (ES6+)</li>
+        <li><span class="li-text">JavaScript (ES6+)</li>
         <li><span class="li-text">Python</li>
         <li><span class="li-text">React</li>
         <li><span class="li-text">NodeJS</li>
@@ -80,8 +80,7 @@
       <p>When I'm not coding I'm usually training for my next half-marathon, reading a book about the tech industry or
         watching English <strike>soccer</strike> football.</p>
 
-      <p class="links">Check out my <a href="BenUnyoloCV.pdf" target="_blank">resume</a>, <a
-          href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
+      <p class="links">Check out my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
           href="https://github.com/benunyolo" target="_blank">GitHub</a>, or send
         me an <a href="mailto:ben@benunyolo.com" target="_blank">email</a>.</p>
 
@@ -100,7 +99,8 @@
                 <strong>code:</strong>
                 <a href="https://github.com/BenUnyolo/worldscratchmap" target="_blank">front</a>,
                 <a href="https://github.com/BenUnyolo/worldscratchmap-backend" target="_blank">back</a> |
-                <a href="https://benunyolo.github.io/worldscratchmap" target="_blank">demo</a>
+                <a href="https://benunyolo.github.io/worldscratchmap" target="_blank">demo</a> |
+                <a id="world-map-video-link" data-micromodal-trigger="world-map-modal">video</a>
               </div>
               <div class="details">
                 <p>
@@ -163,12 +163,12 @@
                 <p>
                   A web app that enables the user to create audio files from a list of words or phrases in multiple
                   languages. It utilises the ResponsiveVoice text-to-speech API to generate the audio, and the JSZip
-                  javascript library to create the zip files for the mp3 files. It uses <strong>vanilla
-                    Javascript</strong>, with <strong>ES6</strong>.
+                  JavaScript library to create the zip files for the mp3 files. It uses <strong>Vanilla
+                    JavaScript</strong>, with <strong>ES6</strong>.
                 </p>
               </div>
               <div class="technologies">
-                <span class="technology">Javascript</span>
+                <span class="technology">JavaScript</span>
                 <span class="technology">HTML</span>
                 <span class="technology">CSS</span>
               </div>
@@ -187,12 +187,12 @@
               <div class="details">
                 <p>
                   A web game to help with learning French numbers (0-100). It generates a random number between 0 & 100,
-                  plays the audio in French and the user inputs the number. It uses <strong>vanilla Javascript</strong>,
+                  plays the audio in French and the user inputs the number. It uses <strong>Vanilla JavaScript</strong>,
                   with <strong>ES6</strong>.
                 </p>
               </div>
               <div class="technologies">
-                <span class="technology">Javascript</span>
+                <span class="technology">JavaScript</span>
                 <span class="technology">HTML</span>
                 <span class="technology">CSS</span>
               </div>
@@ -248,7 +248,7 @@
             <span class="cert-tech">(
               <strong>HTML</strong>,
               <strong>CSS</strong>,
-              <strong>Javascript</strong>,
+              <strong>JavaScript</strong>,
               <strong>Node</strong>,
               <strong>Express</strong>,
               <strong>MongoDB</strong>,
@@ -262,7 +262,7 @@
             <a href="https://www.udemy.com/course/understand-javascript/" target="_blank">JavaScript: Understanding the
               Weird Parts</a>
             <span class="cert-tech">(
-              <strong>Advanced Javascript</strong>
+              <strong>Advanced JavaScript</strong>
               )
             </span>
           </span>
@@ -271,7 +271,7 @@
           <span class="li-text">
             <a href="https://javascript30.com/" target="_blank">JavaScript 30</a>
             <span class="cert-tech">(
-              <strong>Javascript</strong>
+              <strong>JavaScript</strong>
               )
             </span>
           </span>
@@ -289,7 +289,8 @@
         </li>
         <li>
           <span class="li-text">
-            <a href="https://www.udemy.com/course/js-algorithms-and-data-structures-masterclass/" target="_blank">JavaScript Algorithms and Data Structures</a>
+            <a href="https://www.udemy.com/course/js-algorithms-and-data-structures-masterclass/"
+              target="_blank">JavaScript Algorithms and Data Structures</a>
             <span class="cert-tech">(
               <strong>Data Structures</strong>,
               <strong>Algorithms</strong>
