added video for cocktail book

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="col">
           <div class="square">
             <div class="project">
-              <h4>Scrath Map</h4>
+              <h4>Scratch Map</h4>
               <div class="view-project">
                 <strong>code:</strong>
                 <a href="https://github.com/BenUnyolo/worldscratchmap" target="_blank">front</a>,
@@ -130,7 +130,7 @@
               <div class="view-project">
                 <a href="https://github.com/BenUnyolo/CocktailBook" target="_blank">code</a> |
                 <a href="https://benuny-cocktailbook.herokuapp.com/" target="_blank">demo</a>
-                <!-- | <a id="cocktail-video-link" data-micromodal-trigger="cocktail-modal">video</a> -->
+                | <a id="cocktail-book-video-link" data-micromodal-trigger="cocktail-book-modal">video</a>
               </div>
               <div class="details">
                 <p>
