made some changes to the description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Portfolio of Ben Unyolo, full stack web developer based in Montreal, Canada">
+  <meta name="description" content="Portfolio of Ben Unyolo, full stack developer based in Montreal, Canada">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/tingle.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
 
-  <title>Ben Unyolo | Full Stack Web Developer</title>
+  <title>Ben Unyolo | Full Stack Developer</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <h1>Ben Unyolo</h1>
       </div>
       <div class="title">
-        <h2>Full Stack Web Developer</h2>
+        <h2>Full Stack Developer</h2>
       </div>
 
       <div class="arrow-div" onclick="scrollDown('aboutme')">
@@ -49,17 +49,17 @@
     <!-- ABOUT ME -->
     <section id="aboutme">
       <h3>About Me</h3>
-      <p>Hi! I’m Ben, a <strong>web developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
+      <p>Hi! I’m Ben, a <strong>full stack developer</strong> originally from England, based in <strong>Montreal</strong>.</p>
       <p>
         After graduating from <strong>The University of Manchester</strong> in England with a degree in
         <strong>Biomedical Sciences</strong>, I decided to
         spend a year working for <strong>Disney</strong> in Orlando.
         Afterwards I returned to the UK and became a <strong>Manager</strong> for a restaurant group in Manchester.
-        The following year I moved to Canada, where I began my Web Developer journey.
+        The following year I moved to Canada, where I began my Developer journey.
         I first lived in Ottawa, but I am now based in Montreal providing Tech Support for the VFX company
         <strong>DNEG</strong>.
       </p>
-      <p class="no-floor">I'm a self taught full stack web developer focusing on JavaScript with a bit more experience
+      <p class="no-floor">I'm a self taught full stack developer focusing on JavaScript with a bit more experience
         on the front-end. Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
         <li><span class="li-text">JavaScript (ES6+)</li>
@@ -306,7 +306,7 @@
     <section id="contact">
       <h3>Contact</h3>
       <p>
-        If you are looking for a passionate, methodical and logical web developer with a strong determination to succeed
+        If you are looking for a passionate, methodical and logical developer with a strong determination to succeed
         in this industry, you can send me an email at <a href="mailto:ben@benunyolo.com"
           target="_blank">ben@benunyolo.com</a> or send
         me a message on <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a>.
