added TypeScript to tech stack

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         on the front-end. Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
         <li><span class="li-text">JavaScript (ES6+)</li>
+          <li><span class="li-text">TypeScript</li>
         <li><span class="li-text">Python</li>
         <li><span class="li-text">React</li>
         <li><span class="li-text">NodeJS</li>
