--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio of Ben Unyolo, full stack developer based in Montreal, Canada">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="css/tingle.css" rel="stylesheet">
+  <link href="dist/styles.css" rel="stylesheet">
   <!-- icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -320,9 +319,7 @@
     </section>
   </div>
 
-  <script src="js/moveTo.js"></script>
-  <script src="js/tingle.js"></script>
-  <script src="js/script.js"></script>
+  <script src="dist/main.js"></script>
   </script>
 </body>
 
