reanmed css output file

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-F58V258CL3"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F58V258CL3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-F58V258CL3');
-  </script> -->
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio of Ben Unyolo, full stack developer based in Montreal, Canada">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="dist/styles.css" rel="stylesheet">
+  <link href="dist/main.css" rel="stylesheet">
   <!-- icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
