reorganised most of the css and added  mixins and nested syntax

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Full Stack Developer</h2>
       </div>
 
-      <div class="arrow-div scroll-link" data-scroll-location="aboutme">
+      <div class="arrowDiv scroll-link" data-scroll-location="aboutme">
         <svg viewBox="4 4 16 16" class="arrow bounce" xmlns="http://www.w3.org/2000/svg">
           <path d="M0 0h34v24H0V0z" fill="none" />
           <path d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z" />
@@ -58,20 +58,20 @@
         I first lived in Ottawa, but I am now based in Montreal providing Tech Support for the VFX company
         <strong>DNEG</strong>.
       </p>
-      <p class="no-floor">I'm a self taught full stack developer focusing on JavaScript with a bit more experience
+      <p class="noMarginBottom">I'm a self taught full stack developer focusing on JavaScript with a bit more experience
         on the front-end. Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
-        <li><span class="li-text">JavaScript (ES6+)</li>
-          <li><span class="li-text">TypeScript</li>
-        <li><span class="li-text">Python</li>
-        <li><span class="li-text">React</li>
-        <li><span class="li-text">NodeJS</li>
-        <li><span class="li-text">ExpressJS</li>
-        <li><span class="li-text">Flask</li>
-        <li><span class="li-text">MongoDB</li>
-        <li><span class="li-text">SQL (MySQL)</li>
-        <li><span class="li-text">HTML</li>
-        <li><span class="li-text">CSS</li>
+        <li><span class="liText">JavaScript (ES6+)</li>
+          <li><span class="liText">TypeScript</li>
+        <li><span class="liText">Python</li>
+        <li><span class="liText">React</li>
+        <li><span class="liText">NodeJS</li>
+        <li><span class="liText">ExpressJS</li>
+        <li><span class="liText">Flask</li>
+        <li><span class="liText">MongoDB</li>
+        <li><span class="liText">SQL (MySQL)</li>
+        <li><span class="liText">HTML</li>
+        <li><span class="liText">CSS</li>
       </ul>
       <p>To see more, take a look at my <a class="scroll-link" data-scroll-location="projects">projects</a> and <a
         class="scroll-link" data-scroll-location="certifications">certifications</a>.</p>
@@ -226,12 +226,12 @@
     <!-- CERTIFICATIONS -->
     <section id="certifications">
       <h3>Certifications</h3>
-      <ul>
+      <ul class="certList">
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science"
               target="_blank">Harvard CS50</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>C</strong>,
               <strong>Python</strong>,
               <strong>SQL</strong>,
@@ -242,10 +242,10 @@
           </span>
         </li>
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://www.udemy.com/course/the-web-developer-bootcamp/" target="_blank">The Web Developer
               Bootcamp</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>HTML</strong>,
               <strong>CSS</strong>,
               <strong>JavaScript</strong>,
@@ -258,29 +258,29 @@
           </span>
         </li>
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://www.udemy.com/course/understand-javascript/" target="_blank">JavaScript: Understanding the
               Weird Parts</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>Advanced JavaScript</strong>
               )
             </span>
           </span>
         </li>
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://javascript30.com/" target="_blank">JavaScript 30</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>JavaScript</strong>
               )
             </span>
           </span>
         </li>
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://www.udemy.com/course/react-redux/" target="_blank">Modern React
               with Redux</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>React</strong>,
               <strong>Redux</strong>
               )
@@ -288,10 +288,10 @@
           </span>
         </li>
         <li>
-          <span class="li-text">
+          <span class="liText">
             <a href="https://www.udemy.com/course/js-algorithms-and-data-structures-masterclass/"
               target="_blank">JavaScript Algorithms and Data Structures</a>
-            <span class="cert-tech">(
+            <span class="certList__certTech">(
               <strong>Data Structures</strong>,
               <strong>Algorithms</strong>
               )
