improved project boxes styling

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         on the front-end. Some of the technologies and tools I've been working with recently include:
       <ul class="stack">
         <li><span class="liText">JavaScript (ES6+)</li>
-          <li><span class="liText">TypeScript</li>
+        <li><span class="liText">TypeScript</li>
         <li><span class="liText">Python</li>
         <li><span class="liText">React</li>
         <li><span class="liText">NodeJS</li>
@@ -80,7 +80,7 @@
       <p>When I'm not coding I'm usually training for my next half-marathon, reading a book about the tech industry or
         watching English <strike>soccer</strike> football.</p>
 
-      <p class="links">Check out my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
+      <p>Check out my <a href="https://www.linkedin.com/in/benunyolo/" target="_blank">LinkedIn</a> and <a
           href="https://github.com/benunyolo" target="_blank">GitHub</a>, or send
         me an <a href="mailto:ben@benunyolo.com" target="_blank">email</a>.</p>
 
@@ -90,19 +90,19 @@
     <!-- PORTFOLIO -->
     <section id="projects">
       <h3>Projects</h3>
-      <div class="row row-cols">
-        <div class="col">
-          <div class="square">
-            <div class="project">
+      <div class="projectBoxes">
+        <div class="projectBoxes__box">
+          <div class="projectBoxes__square">
+            <div class="projectBoxes__contents">
               <h4>Scratch Map</h4>
-              <div class="view-project">
+              <div class="projectBoxes__links">
                 <strong>code:</strong>
                 <a href="https://github.com/BenUnyolo/worldscratchmap" target="_blank">front</a>,
                 <a href="https://github.com/BenUnyolo/worldscratchmap-backend" target="_blank">back</a> |
                 <a href="https://benunyolo.github.io/worldscratchmap" target="_blank">demo</a> |
                 <a id="world-map-video-link" data-micromodal-trigger="world-map-modal">video</a>
               </div>
-              <div class="details">
+              <div class="projectBoxes__details">
                 <p>
                   A full stack web app where the user can create interactive maps to show countries that they have
                   visited. It
@@ -114,25 +114,25 @@
                   framework <strong>Flask</strong>, with a <strong>MySQL</strong> database.
                 </p>
               </div>
-              <div class="technologies">
-                <span class="technology">React</span>
-                <span class="technology">Python</span>
-                <span class="technology">Flask</span>
-                <span class="technology">MySQL</span>
+              <div class="projectBoxes__technologies">
+                <span class="projectBoxes__techButton">React</span>
+                <span class="projectBoxes__techButton">Python</span>
+                <span class="projectBoxes__techButton">Flask</span>
+                <span class="projectBoxes__techButton">MySQL</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="square">
-            <div class="project">
+        <div class="projectBoxes__box">
+          <div class="projectBoxes__square">
+            <div class="projectBoxes__contents">
               <h4>Cocktail Book</h4>
-              <div class="view-project">
+              <div class="projectBoxes__links">
                 <a href="https://github.com/BenUnyolo/CocktailBook" target="_blank">code</a> |
                 <a href="https://benuny-cocktailbook.herokuapp.com/" target="_blank">demo</a>
                 | <a id="cocktail-book-video-link" data-micromodal-trigger="cocktail-book-modal">video</a>
               </div>
-              <div class="details">
+              <div class="projectBoxes__details">
                 <p>
                   A full stack web app to store cocktail recipes. It uses the MERN stack, so <strong>React</strong> on
                   the front end, with <strong>Redux</strong> for state management, and on the backend
@@ -140,26 +140,26 @@
                   for CSS styling and <strong>JSON web tokens</strong> (JWT) to track user login state.
                 </p>
               </div>
-              <div class="technologies">
-                <span class="technology">React</span>
-                <span class="technology">Redux</span>
-                <span class="technology">Node.js</span>
-                <span class="technology">Express</span>
-                <span class="technology">MongoDB</span>
+              <div class="projectBoxes__technologies">
+                <span class="projectBoxes__techButton">React</span>
+                <span class="projectBoxes__techButton">Redux</span>
+                <span class="projectBoxes__techButton">Node.js</span>
+                <span class="projectBoxes__techButton">Express</span>
+                <span class="projectBoxes__techButton">MongoDB</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="square">
-            <div class="project">
+        <div class="projectBoxes__box">
+          <div class="projectBoxes__square">
+            <div class="projectBoxes__contents">
               <h4>Text to Audio App</h4>
-              <div class="view-project">
+              <div class="projectBoxes__links">
                 <a href="https://github.com/BenUnyolo/texttoaudio" target="_blank">code</a> |
                 <a href="https://benunyolo.github.io/TextToAudio/" target="_blank">demo</a> |
                 <a id="text-audio-video-link" data-micromodal-trigger="text-audio-modal">video</a>
               </div>
-              <div class="details">
+              <div class="projectBoxes__details">
                 <p>
                   A web app that enables the user to create audio files from a list of words or phrases in multiple
                   languages. It utilises the ResponsiveVoice text-to-speech API to generate the audio, and the JSZip
@@ -167,55 +167,55 @@
                     JavaScript</strong>, with <strong>ES6</strong>.
                 </p>
               </div>
-              <div class="technologies">
-                <span class="technology">JavaScript</span>
-                <span class="technology">HTML</span>
-                <span class="technology">CSS</span>
+              <div class="projectBoxes__technologies">
+                <span class="projectBoxes__techButton">JavaScript</span>
+                <span class="projectBoxes__techButton">HTML</span>
+                <span class="projectBoxes__techButton">CSS</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="square">
-            <div class="project">
+        <div class="projectBoxes__box">
+          <div class="projectBoxes__square">
+            <div class="projectBoxes__contents">
               <h4>French Numbers Game</h4>
-              <div class="view-project">
+              <div class="projectBoxes__links">
                 <a href="https://github.com/BenUnyolo/numbergame" target="_blank">code</a> |
                 <a href="https://benunyolo.github.io/numbergame/" target="_blank">demo</a> |
                 <a id="numbers-video-link" data-micromodal-trigger="numbers-modal">video</a>
               </div>
-              <div class="details">
+              <div class="projectBoxes__details">
                 <p>
                   A web game to help with learning French numbers (0-100). It generates a random number between 0 & 100,
                   plays the audio in French and the user inputs the number. It uses <strong>Vanilla JavaScript</strong>,
                   with <strong>ES6</strong>.
                 </p>
               </div>
-              <div class="technologies">
-                <span class="technology">JavaScript</span>
-                <span class="technology">HTML</span>
-                <span class="technology">CSS</span>
+              <div class="projectBoxes__technologies">
+                <span class="projectBoxes__techButton">JavaScript</span>
+                <span class="projectBoxes__techButton">HTML</span>
+                <span class="projectBoxes__techButton">CSS</span>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="square">
-            <div class="project">
+        <div class="projectBoxes__box">
+          <div class="projectBoxes__square">
+            <div class="projectBoxes__contents">
               <h4>Discount Book Finder</h4>
-              <div class="view-project">
+              <div class="projectBoxes__links">
                 <a href="https://github.com/BenUnyolo/BookOutletPrice" target="_blank">code</a> |
                 <a id="book-video-link" data-micromodal-trigger="book-modal">video</a>
               </div>
-              <div class="details">
+              <div class="projectBoxes__details">
                 <p>
                   A script to help me find books on the discount book site bookoutlet.com that I have on my Good Reads
                   'To Read' shelf. It pulls the to read shelf from the Good Reads API and uses web scraping to search
                   bookoutlet.com, then returning a list of books featuring in both with the price and URL.
                 </p>
               </div>
-              <div class="technologies">
-                <span class="technology">Node.js</span>
+              <div class="projectBoxes__technologies">
+                <span class="projectBoxes__techButton">Node.js</span>
               </div>
             </div>
           </div>
@@ -315,7 +315,7 @@
 
     <!-- FOOTER -->
     <section id="footer">
-      <p>Page designed by Ben Unyolo.</p>
+      <p class="xSmallPaddingBottom">Page designed by Ben Unyolo.</p>
     </section>
   </div>
 
